--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.54.0",
+    "dotenv": "^16.1.4",
     "firebase": "^9.22.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,8 +24,10 @@
     "redux-saga": "^1.2.3",
     "redux-thunk": "^2.4.2",
     "reselect": "^4.1.8",
+    "stripe": "^12.9.0",
     "styled-components": "^6.0.0-rc.3",
-    "vite-plugin-svgr": "^3.2.0"
+    "vite-plugin-svgr": "^3.2.0",
+    "vite-require": "^0.2.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
