--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.54.0",
+    "@types/styled-components": "^5.1.26",
     "and": "^0.0.3",
+    "babel-plugin-macros": "^3.1.0",
     "dotenv": "^16.1.4",
     "firebase": "^9.22.1",
     "react": "^18.2.0",
@@ -27,12 +29,14 @@
     "reselect": "^4.1.8",
     "stripe": "^12.9.0",
     "styled-components": "^6.0.0-rc.3",
+    "typed-redux-saga": "^1.5.0",
     "vite-plugin-svgr": "^3.2.0",
     "vite-require": "^0.2.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
+    "@types/redux-logger": "^3.0.9",
     "@vitejs/plugin-react": "^4.0.0",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
