--- a/package.json
+++ b/package.json
@@ -3,11 +3,19 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "jest": {
+    "testEnvironment": "jsdom",
+    "setupFilesAfterEnv": [
+      "setupTests.js"
+    ]
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@stripe/react-stripe-js": "^2.1.0",
@@ -34,15 +42,27 @@
     "vite-require": "^0.2.3"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.22.6",
+    "@babel/preset-react": "^7.22.5",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.2",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
     "@types/redux-logger": "^3.0.9",
     "@vitejs/plugin-react": "^4.0.0",
+    "@vitest/coverage-v8": "^0.32.4",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "jest": "^29.6.0",
+    "jest-environment-jsdom": "^29.6.0",
+    "jsdom": "^22.1.0",
+    "react-test-renderer": "^18.2.0",
     "sass": "^1.62.1",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "vitest": "^0.32.4"
   }
 }
