--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "jest-environment-jsdom": "^29.6.0",
     "jsdom": "^22.1.0",
     "react-test-renderer": "^18.2.0",
+    "redux-saga-test-plan": "^4.0.6",
     "sass": "^1.62.1",
     "vite": "^4.3.9",
     "vitest": "^0.32.4"
